1、主体框架基本搭建成功，还有很多细节需要完善

--- a/basiclib/src/main/res/values/strings.xml
+++ b/basiclib/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">公共资源库</string>
+    <string name="user_app_name">公共资源库</string>
+    <string name="unknow_version">未知版本</string>
 </resources>
