--- a/basicres/src/main/res/values/strings.xml
+++ b/basicres/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">basicres</string>
+    <string name="user_app_name">basicres</string>
+
+    <string name="refresh_pull_down">下拉刷新</string>
+    <string name="refresh_refreshing">正在刷新...</string>
+    <string name="refresh_release">释放刷新</string>
+    <string name="error_refresh">网络异常，点击刷新</string>
+    <string name="loading_now">正在加载中...</string>
+    <string name="loading_data">正在加载数据...</string>
+    <string name="empty_default">暂无数据</string>
 </resources>
