--- a/user/src/main/res/values/strings.xml
+++ b/user/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">用户组件</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_app_name">用户组件</string>
 </resources>
