引入部分工具类，开始用该框架做一个简单的demo

--- a/basiclib/src/main/res/values/strings.xml
+++ b/basiclib/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="user_app_name">公共资源库</string>
-    <string name="unknow_version">未知版本</string>
+    <string name="lib_app_name">公共资源库</string>
+    <string name="lib_unknow_version">未知版本</string>
+    <string name="lib_need_permission">您所执行的操作需要%1$s权限，请前往应用设置中打开</string>
+    <string name="lib_go_setting">去设置</string>
+    <string name="lib_cancel">取消</string>
 </resources>
