--- a/routerservice/src/main/res/values/strings.xml
+++ b/routerservice/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="user_app_name">routerservice</string>
+    <string name="router_app_name">routerservice</string>
 </resources>
