--- a/basicres/src/main/res/values/strings.xml
+++ b/basicres/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="user_app_name">basicres</string>
+    <string name="res_app_name">basicres</string>
 
     <string name="refresh_pull_down">下拉刷新</string>
     <string name="refresh_refreshing">正在刷新...</string>
